# flapperbird

./: .gitignore  CMakeLists.txt  README.md  wii.cmake
source/: back_jpg.h  font_ttf.h  main.c  main.cpp
